opam-version: "2.0"
name: "satysfi-class-jlreq"
version: "0.0.1"
synopsis: "A document class for SATySFi"
authors: "Noriyuki Abe"
license: "2-clause BSD"
depends: [
  "satysfi" {>= "0.0.4" & < "0.0.5"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "-name" "class-jlreq"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
