opam-version: "2.0"
name: "satysfi-class-jlreq"
version: "0.0.2"
synopsis: "A document class for SATySFi"
authors: "Noriyuki Abe"
maintainer: "Noriyuki Abe"
homepage: "https://github.com/abenori/satysfi-class-jlreq/"
bug-reports: "https://github.com/abenori/satysfi-class-jlreq/issues"
dev-repo: "git+https://github.com/abenori/satysfi-class-jlreq.git"
license: "BSD-2-Clause-FreeBSD"
depends: [
  "satysfi" {>= "0.0.4"}
  "satyrographos"
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "-name" "class-jlreq"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
